test/data/semantic/bad/call_expr_type_mismatch.coy
fn negate(x: i64) -> i64 {
    -x
}

fn main() -> () {
    let x = negate(1.0);

    ()
}
